added mobile css

--- a/index.html
+++ b/index.html
@@ -42,13 +42,14 @@
           </button>
           
       </nav>
+      <h2 class="d-block d-sm-none logo-font text-black"><strong>Eva/</strong> Page</h2><!--to display only from 800px to down-->
   </div>
 </header>
 
     <div class="container h-100 section_margin">
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font text-black">
+                <h1 class="display-4 logo-font text-black best_margin">
                     The best pregnancy advice are here
                 </h1>
                 <div class="my-5">
