read now page initiate

--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
+          <h2 class="d-block d-sm-none logo-font text-black evapage_mobile"><strong>Eva/</strong> Page</h2><!--to display only from 800px to down-->
           
       </nav>
-      <h2 class="d-block d-sm-none logo-font text-black"><strong>Eva/</strong> Page</h2><!--to display only from 800px to down-->
+      
   </div>
 </header>
 
@@ -53,7 +54,7 @@
                     The best pregnancy advice are here
                 </h1>
                 <div class="my-5">
-                    <h4>
+                    <h4 class="read_now">
                         <a href="page1.html" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Read Now</a>
                     </h4>
                 </div>
